--- a/cdn/style.css
+++ b/cdn/style.css
@@ -147,6 +147,39 @@
     color: #333;
 }
 
+.main_blog_meta{
+    font-size: 0.8em;
+    margin-top: 10px;
+    background-color: #FBFBFB;
+    padding: 10px 5px;
+    text-align: center;
+}
+
+.main_blog_meta p{
+    margin: 0;
+    color: #999999;
+    font-weight: 400;
+}
+
+.main_blog_meta{
+    color: #999999;
+}
+
+.main_blog_meta p a{
+    color: #666666;
+}
+
+.main_blog_meta p a:hover{
+    text-decoration: underline;
+}
+
+.main_blog_meta img{
+    max-width: 15px;
+    max-height: 15px;
+    border-radius: 50%;
+    margin-left: 5px;
+}
+
 /*Optin*/
 
 .main_optin{
